syntax = "proto3";

package lottery.favorite;


import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "utils/paginate.proto";

import "lottery/lottery.proto";

option go_package = "lottery.favorite";

// https://github.com/grpc-ecosystem/grpc-gateway/blob/main/examples/internal/proto/examplepb/a_bit_of_everything.proto#L19C99
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  schemes: HTTPS;
  host: "api.zuoyinyun.com";
  security_definitions: {
    security: {
      key: "OAuth2";
      value: {
        type: TYPE_OAUTH2;
        flow: FLOW_ACCESS_CODE;
        authorization_url: "https://example.com/oauth/authorize";
        token_url: "https://example.com/oauth/token";
        scopes: {
          scope: {
            key: "login";
          }
        }
      }
    }
  }
};

service FavoriteService {
  rpc List(ListRequest) returns (ListResponse) {
    option (google.api.http) = {
      get: "/lottery.favorite.FavoriteService/favorites"
    };
  }
  rpc Get(GetRequest) returns (GetResponse) {
    option (google.api.http) = {
      get: "/lottery.favorite.FavoriteService/favorites/{id}"
    };
  }
  rpc GetByLotteryId(GetByLotteryIdRequest) returns (GetByLotteryIdResponse) {
    option (google.api.http) = {
      get: "/lottery.favorite.FavoriteService/favorites/lotterys/{lottery_id}"
    };
  }
  rpc Create(CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post: "/lottery.favorite.FavoriteService/favorites",
      body: "*"
    };
  }
  rpc Update(UpdateRequest) returns (UpdateResponse) {
    option (google.api.http) = {
      put: "/lottery.favorite.FavoriteService/favorites/{id}",
      body: "*"
    };
  }
  rpc Delete(DeleteRequest) returns (DeleteResponse) {
    option (google.api.http) = {
      delete: "/lottery.favorite.FavoriteService/favorites/{id}",
    };
  }
}

message Favorite {
  int32 id = 1;
  string user_id = 2;
  int32 lottery_id = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}
message NewFavorite {
  string user_id = 1;
  int32 lottery_id = 2;
}
message FavoriteWithLottery {
  Favorite favorite = 1;
  lottery.Lottery lottery = 2;
}

message ListRequest {
  string user_id = 1;
  utils.paginate.Paginate paginate = 2;
}
message ListResponse {
  repeated FavoriteWithLottery favorites = 1;
  utils.paginate.Paginated paginated = 2;
}

message GetRequest {
  int32 id = 1;
}
message GetResponse {
  FavoriteWithLottery favorite = 1;
}

message GetByLotteryIdRequest {
  int32 lottery_id = 1;
}
message GetByLotteryIdResponse {
  Favorite favorite = 1;
}

message CreateRequest {
  NewFavorite favorite = 1;
}
message CreateResponse {
  FavoriteWithLottery favorite = 1;
}

message UpdateRequest {
  int32 id = 1;
  NewFavorite favorite = 2;
}
message UpdateResponse {
  FavoriteWithLottery favorite = 1;
}

message DeleteRequest {
  int32 id = 1;
}
message DeleteResponse {
}
